--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                         <h2>Sunny Play</h2>
 
-                        <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span></span>°F at our pet
+                        <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span id="weather-temperature"></span>°F at our pet
                             playground.</p>
                     </div>
                     <div class="intro-feature">
@@ -180,6 +180,8 @@
     <footer class="site-footer">
         <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
